display contents and changed variable name of astract

--- a/thesis/templates/index.html
+++ b/thesis/templates/index.html
@@ -12,7 +12,7 @@
               <h3>Authors: {{ post.authors }}</h3>
               <h3>Adviser: {{ post.adviser }}</h3>
               <h3>Department: {{ post.department }}</h3>
-              <p>{{ post.astract }}</p>
+              <p>{{ post.abstract }}</p>
               <br>
       {% endfor %}
 </body>
